Colores de botones, traduccion de cotizacion

--- a/public/i18n/de.json
+++ b/public/i18n/de.json
@@ -72,5 +72,23 @@
   "anos": "Jahre",
   "selecciona-proxima-aventura": "Wähle dein nächstes Abenteuer",
   "descubre-la-magia-de-mexico": "Entdecke den Zauber Mexikos",
-  "explora-fronteras-lejanas": "Erkunde ferne Horizonte"
+  "explora-fronteras-lejanas": "Erkunde ferne Horizonte",
+  "cotizacion-s": "Angebot:",
+  "reserva_viaje": "Buchen Sie Ihre Reise nach {{destino}}",
+  "descripcion_cotizacion": "Wir haben dieses personalisierte Angebot nach Ihren Wünschen erstellt. Bei Fragen steht Ihnen Ihr Berater gerne zur Verfügung.",
+  "fechas_viaje": "Reisedaten",
+  "noches-s": "{{noches}} Nächte",
+  "precio_total": "Gesamtpreis",
+  "medios_pago": "Erkundigen Sie sich bei Ihrem Berater nach den verfügbaren Zahlungsmethoden.",
+  "destino_destacado": "Hervorgehobenes Reiseziel",
+  "alojamiento_seleccionado": "Ausgewählte Unterkunft",
+  "confirmacion_inmediata": "Sofortige Bestätigung",
+  "fotos_alojamiento": "Unterkunftsfotos",
+  "ver_todas_fotos": "Alle Fotos ansehen",
+  "aviso_legal": "Die angezeigten Preise und die Verfügbarkeit der Produkte dienen nur als Referenz und sind zum Zeitpunkt der Suche gültig. Sie können sich bis zur Bestätigung der Buchung ändern. Wir können nicht garantieren, dass diese Preise und/oder Produkte zum Zeitpunkt der Buchung noch verfügbar sind. Die endgültigen Preise und Produkte werden bei der Buchung bestätigt.",
+  "total_propuesta": "Gesamtangebot",
+  "contactar_agente": "Agent kontaktieren",
+  "desde_hora": "Ab {{hora}} Uhr",
+  "hasta_hora": "Bis {{hora}} Uhr",
+  "estrellas": "Sterne"
 }
