--- a/public/i18n/es.json
+++ b/public/i18n/es.json
@@ -1,76 +1,94 @@
 {
-    "titulo-destinos": "¡Perfecto para ti!",
-    "destinos-nacionales": "Destinos Nacionales",
-    "destinos-internacionales": "Destinos Internacionales",
-    "selecciona-destino": "Elige tu destino",
-    "texto-nacionales": "México te sorprende: playas, ciudades y momentos únicos.",
-    "texto-internacionales": "Selecciona un continente para explorar los mejores destinos internacionales.",
-    "explora-continente": "Explora por Continente",
-    "seleccionar-destino": "Selecciona un destino",
-    "no-hoteles": "No hay hoteles disponibles",
-    "hoteles-no-encontrados": "Actualmente no encontramos hoteles.",
-    "seleccionar-nueva-ciudad": "Intenta seleccionar otra ciudad o vuelve más tarde.",
-    "ver-galeria-salto": "Ver <br> Galería",
-    "ver-galeria": "Ver Galería",
-    "descripcion": "Descripción",
-    "amenidades": "Amenidades",
-    "ubicacion": "Ubicación",
-    "compartir-hotel": "Compartir Hotel",
-    "nota": "Nota",
-    "descripcion-nota": "Algunas amenidades pueden tener un costo adicional.",
-    "cotizar": "Cotizar",
-    "operadores-verificados": "Operamos con proveedores verificados.",
-    "cotizacion": "Cotización sin compromiso, confirmación segura.",
-    "cotiza-ahora": "Cotizar Ahora.",
-    "asistente": "Asistente virtual",
-    "rango-fecha": "Rango de fechas",
-    "noches": "noches",
-    "asesor": "Asesor",
-    "regimen": "Régimen",
-    "nombre": "Nombre completo",
-    "telefono": "Teléfono",
-    "correo": "Email (Opcional)",
-    "ofertas": "Quiero recibir ofertas y descuentos exclusivos",
-    "peticiones": "Peticiones especiales (Opcional)",
-    "habitaciones": "Habitaciones",
-    "habitacion": "Habitación",
-    "Adultos": "Adultos",
-    "+18": "Desde 18 años",
-    "menores": "Menores",
-    "-18": "Hasta 17 años",
-    "edad-menor": "Edad del menor",
-    "edad": "Edad",
-    "selecciona-edad": "Selecciona la edad de todos los menores.",
-    "por-habitacion": "por habitación",
-    "add-habitacion": "Añadir habitación",
-    "aplicar": "Aplicar",
-    "abrir-imagen": "Abrir imagen",
-    "selecciona-opcion": "Selecciona una opción",
-    "enviar-whats": "Enviar a WhatsApp",
-    "inicio": "Inicio",
-    "aviso-privacidad": "Aviso de Privacidad",
-    "siguenos": "Síguenos en:",
-    "beneficio-hoteles": "<strong>+100 mil</strong> hoteles en todo el mundo",
-    "beneficio-vuelos": "<strong>Vuelos</strong> nacionales e internacionales",
-    "beneficio-pagos": "<strong>Todas</strong> las formas de pago",
-    "beneficio-meses": "Meses <strong>sin intereses</strong>",
-    "beneficio-atencion": "<strong>Atención</strong> 10:00 a 21:00 hrs",
-    "beneficio-anticipo": "Anticipo <strong>mínimo</strong> para reservar, confirmación <strong>segura</strong>",
-    "sin-descripcion": "La descripción de este hotel aún no está disponible en este idioma.",
-    "sin-amenidades": "Las amenidades aún no están disponibles en este idioma.",
-    "cotizacion-mensaje": "Hola, soy {{nombre}} y me interesa una cotización en el hotel {{hotel}} en {{ciudad}}.\nNoches: {{noches}}\nRégimen: {{regimen.es}}\nFecha de entrada: {{entrada}}\nFecha de salida: {{salida}}\nHabitaciones: {{habitaciones}}\n{{detalleHabitaciones.es}}\nPeticiones especiales: {{especiales}}\nTeléfono: {{telefono}}\nCorreo: {{correo}}\nAsesor: {{asesor}}",
-    "empleado_otro": "Otro",
-    "ver-mas": "Ver más",
-    "ver-menos": "Ver menos",
-    "todas-imagenes": "Todas las imágenes",
-    "adulto": "adulto",
-    "adultos": "adultos",
-    "nino": "niño",
-    "ninos": "niños",
-    "edades": "edades",
-    "ano": "año",
-    "anos": "años",
-    "selecciona-proxima-aventura": "Selecciona tu próxima aventura",
-    "descubre-la-magia-de-mexico": "Descubre la magia de México",
-  "explora-fronteras-lejanas": "Explora fronteras lejanas"
+  "titulo-destinos": "¡Perfecto para ti!",
+  "destinos-nacionales": "Destinos Nacionales",
+  "destinos-internacionales": "Destinos Internacionales",
+  "selecciona-destino": "Elige tu destino",
+  "texto-nacionales": "México te sorprende: playas, ciudades y momentos únicos.",
+  "texto-internacionales": "Selecciona un continente para explorar los mejores destinos internacionales.",
+  "explora-continente": "Explora por Continente",
+  "seleccionar-destino": "Selecciona un destino",
+  "no-hoteles": "No hay hoteles disponibles",
+  "hoteles-no-encontrados": "Actualmente no encontramos hoteles.",
+  "seleccionar-nueva-ciudad": "Intenta seleccionar otra ciudad o vuelve más tarde.",
+  "ver-galeria-salto": "Ver <br> Galería",
+  "ver-galeria": "Ver Galería",
+  "descripcion": "Descripción",
+  "amenidades": "Amenidades",
+  "ubicacion": "Ubicación",
+  "compartir-hotel": "Compartir Hotel",
+  "nota": "Nota",
+  "descripcion-nota": "Algunas amenidades pueden tener un costo adicional.",
+  "cotizar": "Cotizar",
+  "operadores-verificados": "Operamos con proveedores verificados.",
+  "cotizacion": "Cotización sin compromiso, confirmación segura.",
+  "cotiza-ahora": "Cotizar Ahora.",
+  "asistente": "Asistente virtual",
+  "rango-fecha": "Rango de fechas",
+  "noches": "noches",
+  "asesor": "Asesor",
+  "regimen": "Régimen",
+  "nombre": "Nombre completo",
+  "telefono": "Teléfono",
+  "correo": "Email (Opcional)",
+  "ofertas": "Quiero recibir ofertas y descuentos exclusivos",
+  "peticiones": "Peticiones especiales (Opcional)",
+  "habitaciones": "Habitaciones",
+  "habitacion": "Habitación",
+  "Adultos": "Adultos",
+  "+18": "Desde 18 años",
+  "menores": "Menores",
+  "-18": "Hasta 17 años",
+  "edad-menor": "Edad del menor",
+  "edad": "Edad",
+  "selecciona-edad": "Selecciona la edad de todos los menores.",
+  "por-habitacion": "por habitación",
+  "add-habitacion": "Añadir habitación",
+  "aplicar": "Aplicar",
+  "abrir-imagen": "Abrir imagen",
+  "selecciona-opcion": "Selecciona una opción",
+  "enviar-whats": "Enviar a WhatsApp",
+  "inicio": "Inicio",
+  "aviso-privacidad": "Aviso de Privacidad",
+  "siguenos": "Síguenos en:",
+  "beneficio-hoteles": "<strong>+100 mil</strong> hoteles en todo el mundo",
+  "beneficio-vuelos": "<strong>Vuelos</strong> nacionales e internacionales",
+  "beneficio-pagos": "<strong>Todas</strong> las formas de pago",
+  "beneficio-meses": "Meses <strong>sin intereses</strong>",
+  "beneficio-atencion": "<strong>Atención</strong> 10:00 a 21:00 hrs",
+  "beneficio-anticipo": "Anticipo <strong>mínimo</strong> para reservar, confirmación <strong>segura</strong>",
+  "sin-descripcion": "La descripción de este hotel aún no está disponible en este idioma.",
+  "sin-amenidades": "Las amenidades aún no están disponibles en este idioma.",
+  "cotizacion-mensaje": "Hola, soy {{nombre}} y me interesa una cotización en el hotel {{hotel}} en {{ciudad}}.\nNoches: {{noches}}\nRégimen: {{regimen.es}}\nFecha de entrada: {{entrada}}\nFecha de salida: {{salida}}\nHabitaciones: {{habitaciones}}\n{{detalleHabitaciones.es}}\nPeticiones especiales: {{especiales}}\nTeléfono: {{telefono}}\nCorreo: {{correo}}\nAsesor: {{asesor}}",
+  "empleado_otro": "Otro",
+  "ver-mas": "Ver más",
+  "ver-menos": "Ver menos",
+  "todas-imagenes": "Todas las imágenes",
+  "adulto": "adulto",
+  "adultos": "adultos",
+  "nino": "niño",
+  "ninos": "niños",
+  "edades": "edades",
+  "ano": "año",
+  "anos": "años",
+  "selecciona-proxima-aventura": "Selecciona tu próxima aventura",
+  "descubre-la-magia-de-mexico": "Descubre la magia de México",
+  "explora-fronteras-lejanas": "Explora fronteras lejanas",
+  "cotizacion-s": "Cotización:",
+  "reserva_viaje": "Reserva tu viaje a {{destino}}",
+  "descripcion_cotizacion": "Diseñamos esta propuesta personalizada según tus preferencias. Si tienes alguna duda, tu agente está listo para asistirte.",
+  "fechas_viaje": "Fechas del viaje",
+  "noches-s": "{{noches}} noches",
+  "precio_total": "Precio total",
+  "medios_pago": "Consulta con tu agente los medios de pago disponibles.",
+  "destino_destacado": "Destino Destacado",
+  "alojamiento_seleccionado": "Alojamiento Seleccionado",
+  "confirmacion_inmediata": "Confirmación Inmediata",
+  "fotos_alojamiento": "Fotos del alojamiento",
+  "ver_todas_fotos": "Ver todas las fotos",
+  "aviso_legal": "Los precios y disponibilidad de productos mostrados son solo de referencia y válidos al momento de la búsqueda, quedando así sujetos a cambios hasta que se confirme la reserva. No podemos garantizar que estos precios y/o productos sigan disponibles al momento de la contratación, el precio y los productos finales serán confirmados al momento de realizar la reserva.",
+  "total_propuesta": "Total propuesta",
+  "contactar_agente": "Contactar agente",
+  "desde_hora": "Desde las {{hora}} h",
+  "hasta_hora": "Hasta las {{hora}} h",
+  "estrellas": "estrellas"
 }
