--- a/public/i18n/fr.json
+++ b/public/i18n/fr.json
@@ -72,5 +72,23 @@
   "anos": "ans",
   "selecciona-proxima-aventura": "Choisissez votre prochaine aventure",
   "descubre-la-magia-de-mexico": "Découvrez la magie du Mexique",
-  "explora-fronteras-lejanas": "Explorez des horizons lointains"
+  "explora-fronteras-lejanas": "Explorez des horizons lointains",
+  "cotizacion-s": "Devis :",
+  "reserva_viaje": "Réservez votre voyage à {{destino}}",
+  "descripcion_cotizacion": "Nous avons conçu cette proposition personnalisée selon vos préférences. Si vous avez des questions, votre agent est prêt à vous assister.",
+  "fechas_viaje": "Dates du voyage",
+  "noches-s": "{{noches}} nuits",
+  "precio_total": "Prix total",
+  "medios_pago": "Consultez votre agent pour connaître les moyens de paiement disponibles.",
+  "destino_destacado": "Destination mise en avant",
+  "alojamiento_seleccionado": "Hébergement sélectionné",
+  "confirmacion_inmediata": "Confirmation immédiate",
+  "fotos_alojamiento": "Photos de l’hébergement",
+  "ver_todas_fotos": "Voir toutes les photos",
+  "aviso_legal": "Les prix et la disponibilité des produits affichés sont fournis à titre indicatif et valables au moment de la recherche. Ils sont susceptibles de changer jusqu’à la confirmation de la réservation. Nous ne pouvons garantir que ces prix et/ou produits seront disponibles au moment de la réservation. Les prix et produits finaux seront confirmés lors de la réservation.",
+  "total_propuesta": "Total de la proposition",
+  "contactar_agente": "Contacter l’agent",
+  "desde_hora": "À partir de {{hora}}",
+  "hasta_hora": "Jusqu’à {{hora}}",
+  "estrellas": "étoiles"
 }
