--- a/public/i18n/pt.json
+++ b/public/i18n/pt.json
@@ -72,5 +72,23 @@
   "anos": "anos",
   "selecciona-proxima-aventura": "Escolha sua próxima aventura",
   "descubre-la-magia-de-mexico": "Descubra a magia do México",
-  "explora-fronteras-lejanas": "Explore horizontes distantes"
+  "explora-fronteras-lejanas": "Explore horizontes distantes",
+  "cotizacion-s": "Cotação:",
+  "reserva_viaje": "Reserve sua viagem para {{destino}}",
+  "descripcion_cotizacion": "Criamos esta proposta personalizada de acordo com suas preferências. Se tiver alguma dúvida, seu agente está pronto para ajudar.",
+  "fechas_viaje": "Datas da viagem",
+  "noches-s": "{{noches}} noites",
+  "precio_total": "Preço total",
+  "medios_pago": "Consulte seu agente sobre os meios de pagamento disponíveis.",
+  "destino_destacado": "Destino em destaque",
+  "alojamiento_seleccionado": "Hospedagem selecionada",
+  "confirmacion_inmediata": "Confirmação imediata",
+  "fotos_alojamiento": "Fotos da hospedagem",
+  "ver_todas_fotos": "Ver todas as fotos",
+  "aviso_legal": "Os preços e a disponibilidade dos produtos exibidos são apenas para referência e válidos no momento da busca. Estão sujeitos a alterações até que a reserva seja confirmada. Não podemos garantir que esses preços e/ou produtos ainda estejam disponíveis no momento da contratação. Os preços e produtos finais serão confirmados no momento da reserva.",
+  "total_propuesta": "Total da proposta",
+  "contactar_agente": "Entrar em contato com o agente",
+  "desde_hora": "A partir das {{hora}}",
+  "hasta_hora": "Até {{hora}}",
+  "estrellas": "estrelas"
 }
