--- a/public/i18n/en.json
+++ b/public/i18n/en.json
@@ -72,5 +72,23 @@
   "anos": "years",
   "selecciona-proxima-aventura": "Choose your next adventure",
   "descubre-la-magia-de-mexico": "Discover the magic of Mexico",
-  "explora-fronteras-lejanas": "Explore distant horizons"
+  "explora-fronteras-lejanas": "Explore distant horizons",
+  "cotizacion-s": "Quote:",
+  "reserva_viaje": "Book your trip to {{destino}}",
+  "descripcion_cotizacion": "We designed this personalized proposal according to your preferences. If you have any questions, your agent is ready to assist you.",
+  "fechas_viaje": "Travel dates",
+  "noches-s": "{{noches}} nights",
+  "precio_total": "Total price",
+  "medios_pago": "Ask your agent about available payment methods.",
+  "destino_destacado": "Featured Destination",
+  "alojamiento_seleccionado": "Selected Accommodation",
+  "confirmacion_inmediata": "Instant Confirmation",
+  "fotos_alojamiento": "Accommodation photos",
+  "ver_todas_fotos": "View all photos",
+  "aviso_legal": "Prices and product availability shown are for reference only and valid at the time of search. They are subject to change until the reservation is confirmed. We cannot guarantee that these prices and/or products will still be available at the time of booking. Final prices and products will be confirmed when the reservation is made.",
+  "total_propuesta": "Total proposal",
+  "contactar_agente": "Contact agent",
+  "desde_hora": "From {{hora}}",
+  "hasta_hora": "Until {{hora}}",
+  "estrellas": "stars"
 }
