Setteo de informacion cargada y ver los detalles guardados

--- a/public/i18n/de.json
+++ b/public/i18n/de.json
@@ -78,7 +78,9 @@
   "descripcion_cotizacion": "Wir haben dieses personalisierte Angebot nach Ihren Wünschen erstellt. Bei Fragen steht Ihnen Ihr Berater gerne zur Verfügung.",
   "fechas_viaje": "Reisedaten",
   "noches-s": "{{noches}} Nächte",
-  "precio_total": "Gesamtpreis",
+  "precio_sin_seguro": "Preis ohne Versicherung",
+  "precio_con_seguro": "Preis mit Versicherung",
+  "precio_a_meses": "Preis in Raten",
   "medios_pago": "Erkundigen Sie sich bei Ihrem Berater nach den verfügbaren Zahlungsmethoden.",
   "destino_destacado": "Hervorgehobenes Reiseziel",
   "alojamiento_seleccionado": "Ausgewählte Unterkunft",
