--- a/public/i18n/en.json
+++ b/public/i18n/en.json
@@ -78,7 +78,9 @@
   "descripcion_cotizacion": "We designed this personalized proposal according to your preferences. If you have any questions, your agent is ready to assist you.",
   "fechas_viaje": "Travel dates",
   "noches-s": "{{noches}} nights",
-  "precio_total": "Total price",
+  "precio_sin_seguro": "Price without insurance",
+  "precio_con_seguro": "Price with insurance",
+  "precio_a_meses": "Installment price",
   "medios_pago": "Ask your agent about available payment methods.",
   "destino_destacado": "Featured Destination",
   "alojamiento_seleccionado": "Selected Accommodation",
