--- a/public/i18n/es.json
+++ b/public/i18n/es.json
@@ -78,7 +78,9 @@
   "descripcion_cotizacion": "Diseñamos esta propuesta personalizada según tus preferencias. Si tienes alguna duda, tu agente está listo para asistirte.",
   "fechas_viaje": "Fechas del viaje",
   "noches-s": "{{noches}} noches",
-  "precio_total": "Precio total",
+  "precio_sin_seguro": "Precio sin seguro",
+  "precio_con_seguro": "Precio con seguro",
+  "precio_a_meses": "Precio a meses",
   "medios_pago": "Consulta con tu agente los medios de pago disponibles.",
   "destino_destacado": "Destino Destacado",
   "alojamiento_seleccionado": "Alojamiento Seleccionado",
