--- a/public/i18n/fr.json
+++ b/public/i18n/fr.json
@@ -78,7 +78,9 @@
   "descripcion_cotizacion": "Nous avons conçu cette proposition personnalisée selon vos préférences. Si vous avez des questions, votre agent est prêt à vous assister.",
   "fechas_viaje": "Dates du voyage",
   "noches-s": "{{noches}} nuits",
-  "precio_total": "Prix total",
+  "precio_sin_seguro": "Prix sans assurance",
+  "precio_con_seguro": "Prix avec assurance",
+  "precio_a_meses": "Prix en plusieurs mensualités",
   "medios_pago": "Consultez votre agent pour connaître les moyens de paiement disponibles.",
   "destino_destacado": "Destination mise en avant",
   "alojamiento_seleccionado": "Hébergement sélectionné",
