--- a/public/i18n/pt.json
+++ b/public/i18n/pt.json
@@ -78,7 +78,9 @@
   "descripcion_cotizacion": "Criamos esta proposta personalizada de acordo com suas preferências. Se tiver alguma dúvida, seu agente está pronto para ajudar.",
   "fechas_viaje": "Datas da viagem",
   "noches-s": "{{noches}} noites",
-  "precio_total": "Preço total",
+  "precio_sin_seguro": "Preço sem seguro",
+  "precio_con_seguro": "Preço com seguro",
+  "precio_a_meses": "Preço em parcelas",
   "medios_pago": "Consulte seu agente sobre os meios de pagamento disponíveis.",
   "destino_destacado": "Destino em destaque",
   "alojamiento_seleccionado": "Hospedagem selecionada",
