--- a/public/i18n/fr.json
+++ b/public/i18n/fr.json
@@ -94,6 +94,7 @@
   "desde_hora": "À partir de {{hora}}",
   "hasta_hora": "Jusqu’à {{hora}}",
   "estrellas": "étoiles",
-  "proximamente": "Prochainement"
+  "proximamente": "Prochainement",
+  "buscar-destinos": "Rechercher des destinations..."
 
 }
