Textos de los destinos nacionales

--- a/public/i18n/de.json
+++ b/public/i18n/de.json
@@ -4,7 +4,7 @@
   "destinos-internacionales": "Internationale Reiseziele",
   "circuitos-cruceros": "Rundreisen & Kreuzfahrten",
   "selecciona-destino": "Wählen Sie Ihr Reiseziel",
-  "texto-nacionales": "Mexiko überrascht Sie: Strände, Städte und einzigartige Momente.",
+  "texto-nacionales": "Mexiko überrascht Sie: Strände, Städte und Einzigartige Momente.",
   "texto-internacionales": "Wählen Sie einen Kontinent, um die besten internationalen Reiseziele zu entdecken.",
   "explora-continente": "Nach Kontinent erkunden",
   "seleccionar-destino": "Reiseziel auswählen",
