--- a/public/i18n/en.json
+++ b/public/i18n/en.json
@@ -4,7 +4,7 @@
   "destinos-internacionales": "International Destinations",
   "circuitos-cruceros": "Travel Tours & Cruises",
   "selecciona-destino": "Choose your destination",
-  "texto-nacionales": "Mexico surprises you: beaches, cities, and unique moments.",
+  "texto-nacionales": "Mexico surprises you: Beaches, Cities and Unique moments.",
   "texto-internacionales": "Select a continent to explore the best international destinations.",
   "explora-continente": "Explore by Continent",
   "seleccionar-destino": "Select a destination",
