--- a/public/i18n/es.json
+++ b/public/i18n/es.json
@@ -4,7 +4,7 @@
   "destinos-internacionales": "Destinos Internacionales",
   "circuitos-cruceros": "Circuitos & Cruceros",
   "selecciona-destino": "Elige tu destino",
-  "texto-nacionales": "México te sorprende: playas, ciudades y momentos únicos.",
+  "texto-nacionales": "México te sorprende: Playas, Ciudades y Momentos únicos.",
   "texto-internacionales": "Selecciona un continente para explorar los mejores destinos internacionales.",
   "explora-continente": "Explora por Continente",
   "seleccionar-destino": "Selecciona un destino",
