--- a/public/i18n/fr.json
+++ b/public/i18n/fr.json
@@ -4,7 +4,7 @@
   "destinos-internacionales": "Destinations internationales",
   "circuitos-cruceros": "Circuits & Croisières",
   "selecciona-destino": "Choisissez votre destination",
-  "texto-nacionales": "Le Mexique vous surprend : plages, villes et moments uniques.",
+  "texto-nacionales": "Le Mexique vous surprend : Plages, Villes et Moments uniques.",
   "texto-internacionales": "Sélectionnez un continent pour explorer les meilleures destinations internationales.",
   "explora-continente": "Explorer par continent",
   "seleccionar-destino": "Sélectionner une destination",
