--- a/public/i18n/pt.json
+++ b/public/i18n/pt.json
@@ -4,7 +4,7 @@
   "destinos-internacionales": "Destinos Internacionais",
   "circuitos-cruceros": "Circuitos & Cruzeiros",
   "selecciona-destino": "Escolha seu destino",
-  "texto-nacionales": "O México surpreende você: praias, cidades e momentos únicos.",
+  "texto-nacionais": "O México surpreende você: Praias, Cidades e Momentos únicos.",
   "texto-internacionales": "Selecione um continente para explorar os melhores destinos internacionais.",
   "explora-continente": "Explore por Continente",
   "seleccionar-destino": "Selecione um destino",
