Palabra del texto en mayuscula

--- a/public/i18n/de.json
+++ b/public/i18n/de.json
@@ -88,7 +88,7 @@
   "confirmacion_inmediata": "Sofortige Bestätigung",
   "fotos_alojamiento": "Unterkunftsfotos",
   "ver_todas_fotos": "Alle Fotos ansehen",
-  "aviso_legal": "Die angezeigten Preise und die Verfügbarkeit der Produkte dienen nur als Referenz und sind zum Zeitpunkt der Suche gültig. Sie können sich bis zur Bestätigung der Buchung ändern. Wir können nicht garantieren, dass diese Preise und/oder Produkte zum Zeitpunkt der Buchung noch verfügbar sind. Die endgültigen Preise und Produkte werden bei der Buchung bestätigt.",
+  "aviso_legal": "Die angezeigten Preise und Verfügbarkeiten dienen lediglich der Information und sind zum Zeitpunkt der Suche aktuell. Sie können sich vor Ihrer Buchungsbestätigung ändern. Die endgültigen Preise und Produkte werden nach Abschluss Ihrer Buchung bestätigt.",
   "total_propuesta": "Gesamtangebot",
   "contactar_agente": "Agent kontaktieren",
   "desde_hora": "Ab {{hora}} Uhr",
