--- a/public/i18n/en.json
+++ b/public/i18n/en.json
@@ -88,7 +88,7 @@
   "confirmacion_inmediata": "Instant Confirmation",
   "fotos_alojamiento": "Accommodation photos",
   "ver_todas_fotos": "View all photos",
-  "aviso_legal": "Prices and product availability shown are for reference only and valid at the time of search. They are subject to change until the reservation is confirmed. We cannot guarantee that these prices and/or products will still be available at the time of booking. Final prices and products will be confirmed when the reservation is made.",
+  "aviso_legal": "Prices and availability shown are for informational purposes only and are current at the time of the search. They may change before you confirm your booking. Final prices and products will be confirmed upon completion of your booking.",
   "total_propuesta": "Total proposal",
   "contactar_agente": "Contact agent",
   "desde_hora": "From {{hora}}",
