--- a/public/i18n/fr.json
+++ b/public/i18n/fr.json
@@ -88,7 +88,7 @@
   "confirmacion_inmediata": "Confirmation immédiate",
   "fotos_alojamiento": "Photos de l’hébergement",
   "ver_todas_fotos": "Voir toutes les photos",
-  "aviso_legal": "Les prix et la disponibilité des produits affichés sont fournis à titre indicatif et valables au moment de la recherche. Ils sont susceptibles de changer jusqu’à la confirmation de la réservation. Nous ne pouvons garantir que ces prix et/ou produits seront disponibles au moment de la réservation. Les prix et produits finaux seront confirmés lors de la réservation.",
+  "aviso_legal": "Les prix et la disponibilité affichés sont donnés à titre indicatif et sont valables au moment de la recherche. Ils peuvent changer avant la confirmation de votre réservation. Les prix et produits définitifs vous seront confirmés une fois votre réservation effectuée.",
   "total_propuesta": "Total de la proposition",
   "contactar_agente": "Contacter l’agent",
   "desde_hora": "À partir de {{hora}}",
