--- a/public/i18n/pt.json
+++ b/public/i18n/pt.json
@@ -88,7 +88,7 @@
   "confirmacion_inmediata": "Confirmação imediata",
   "fotos_alojamiento": "Fotos da hospedagem",
   "ver_todas_fotos": "Ver todas as fotos",
-  "aviso_legal": "Os preços e a disponibilidade dos produtos exibidos são apenas para referência e válidos no momento da busca. Estão sujeitos a alterações até que a reserva seja confirmada. Não podemos garantir que esses preços e/ou produtos ainda estejam disponíveis no momento da contratação. Os preços e produtos finais serão confirmados no momento da reserva.",
+  "aviso_legal": "Os preços e a disponibilidade apresentados são apenas para fins informativos e estão corretos no momento da pesquisa. Eles podem sofrer alterações antes da confirmação da sua reserva. Os preços e produtos finais serão confirmados após a conclusão da sua reserva.",
   "total_propuesta": "Total da proposta",
   "contactar_agente": "Entrar em contato com o agente",
   "desde_hora": "A partir das {{hora}}",
